英文业务员

--- a/src/styles/-Enphone.scss
+++ b/src/styles/-Enphone.scss
@@ -619,6 +619,45 @@
         }
         .unit-content{
           flex:1;
+          
+          .item-clues{
+            float:left;
+            position: relative;
+            font-size: 14px;
+            color:$menuBg;
+            cursor: pointer;
+            padding-left: 20px;
+            line-height: 24px;
+            margin-right: 20px;
+            margin-bottom: 5px;
+            i{
+              position: absolute;
+              left:0px;
+              top:6px;        
+              width: 12px;
+              height: 12px;
+              box-sizing: border-box;
+              border-radius:50%;
+              border:1px solid #939393;
+              background:#fff;
+            }
+            &:hover,&.active{
+              color:$menuActiveText;
+              i{
+                border-color:$menuActiveText;
+                &:after{
+                  content:'';
+                  position: absolute;
+                  width:4px;
+                  height:4px;
+                  border-radius:50%;
+                  left:3px;
+                  top:3px;
+                  background:$menuActiveText;
+                }
+              }
+            }
+          }
         }
       }
       .team-list{
