--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,7 +21,7 @@
 @import './-enCnProduct.scss';
 @import './-Article.scss';
 @import './-home.scss';
-@import './Chinaphone.scss';
+@import './-Chinaphone.scss';
 @import '-Enphone.scss';
 @import '-Sale.scss';
 @import '-webMsg.scss';
