--- a/src/styles/-Chinaphone.scss
+++ b/src/styles/-Chinaphone.scss
@@ -180,6 +180,121 @@
     .el-textarea,.el-input{width: 100%;}
   }
 }
+
+.ChinaphoneNum{
+  clear: both;
+  display: block;
+  background:#fff;
+  margin-bottom:20px;
+  padding:35px 30px;
+  border-radius:8px;
+  overflow: hidden;
+  .card-header{
+    padding:0px;
+    h2{
+      float: left;
+      font-size:24px;
+      color:#2b3848;
+    }
+    .ChinaphoneNumTag{
+      float: right;
+      .item-clues{
+        float:left;
+        position: relative;
+        font-size: 14px;
+        color:$menuBg;
+        cursor: pointer;
+        line-height: 23px;
+        background:#f5f7fa;
+        border-radius: 4px;
+        padding:2px 10px;
+        margin-left:20px;
+        margin-bottom: 5px;
+        &:hover,&.active{
+          background:$menuActiveText;
+          color:#fff;
+        }
+      }
+    }
+  }
+  .ChinaphoneNumItem{
+    clear: both;
+    padding-top:10px;
+    dl{
+      float: left;
+      width:244px;
+      border-radius:8px;
+      border:1px solid #c7cbd5;
+      padding:30px 20px;
+      margin-right:30px;
+      background:#fff;
+      box-shadow:0px 9px 15px rgba(72,118,164,0.13);
+      margin-top:15px;
+      dt,dd{
+        clear: both;
+        display: block;
+        width: 100%;
+        text-align:left;
+      }
+      dt{
+        font-size: 16px;
+        line-height: 1;
+        padding-bottom:15px;
+      }
+      dd{
+        font-size: 46px;
+        line-height: 1;
+        color: #fc5457;
+        font-weight: bold;
+      }
+    }
+  }
+}
+.ChinaphoneMap{
+  clear: both;
+  display: block;
+  background:#fff;
+  border-radius:8px;
+  padding:30px;
+  overflow: hidden;
+  .card-header{
+    padding:0px;
+    h2{
+      float: left;
+      font-size:24px;
+      color:#2b3848;
+    }
+    .ChinaphoneMapDate{
+      float: right;
+      .el-select{
+        float: left;
+        margin-right:10px;
+      }
+      .el-range-editor.el-input__inner{
+        float: left;
+      }
+    }
+  }
+  .ChinaphoneMapChart{
+    clear: both;
+    display: block;
+    margin-top:30px;   
+    position: relative; 
+    .canvas-wrap{
+      position: absolute;
+      left:0;
+      top:0;
+      width: 100%;
+      height: 100%;
+      padding: 15px;
+      .chart-canvas{
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+}
 @media (max-width:1500px){
 
 .search-wrap{
