--- a/src/styles/-Article.scss
+++ b/src/styles/-Article.scss
@@ -294,6 +294,7 @@
                         font-weight:normal;
                         position:relative;
                         color:#333;
+                        height: 54px;
                         &:before{
                             content:'';
                             display:block;
