--- a/src/styles/-Chinaphone.scss
+++ b/src/styles/-Chinaphone.scss
@@ -141,6 +141,7 @@
   }
 }
 .search-wrap{
+  padding-bottom:20px;
   .search-panelOne{
     .el-date-editor,.el-select,.el-checkbox,.el-input{
       float: left;
@@ -185,7 +186,7 @@
   clear: both;
   display: block;
   background:#fff;
-  margin-bottom:20px;
+  margin-bottom:15px;
   padding:35px 30px;
   border-radius:8px;
   overflow: hidden;
