--- a/src/styles/-sidebar.scss
+++ b/src/styles/-sidebar.scss
@@ -46,7 +46,7 @@
       }
       &:hover{
         .svg-i{
-          color: $--color-primary;
+          color:$menuActiveText;
         }
       }
       .svg-i{
