--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -183,7 +183,6 @@
 #nprogress .bar{
   background-color:$menuActiveText!important;
 }
-
 /** 职称图片标识样式 **/
 .JobLevel_1, .JobLevel_2, .JobLevel_3, .JobLevel_4, .JobLevel_5, .JobLevel_6, .JobLevel_7, .JobLevel_8 { position:relative; display:block; width:90px; margin:10px auto; height:24px; font-size:0;overflow:initial; }
 .JobLevel_1:before, .JobLevel_2:before, .JobLevel_3:before, .JobLevel_4:before, .JobLevel_5:before, .JobLevel_6:before, .JobLevel_7:before, .JobLevel_8:before { content:''; position:absolute; display:block; left:-11px; top:-10px; bottom:-10px; right:-11px; background-position:center; background-repeat:no-repeat; -webkit-background-size:100% auto; background-size:100% auto; }
@@ -249,7 +248,7 @@
     display: block;
     background:#f6f8fa;
     border:1px solid #e4e8ee;
-    padding:4px 15px;
+    padding:4px 4px;
     border-radius:4px;
   }  
   .clues-title-btn{
@@ -618,6 +617,72 @@
 .el-backtop{
   z-index:1000!important;
 }
+/**级别修改记录**/
+.popoverzz{position: absolute;left:0px; top:0px; width: 100%; height: 100%;transition:all 0.5s; background:#000; opacity: 0.8; z-index: 2;}
+.popover{
+  clear: both;
+  display: block;
+  position: absolute;
+  z-index: 3;
+  background: #fff;
+  border-radius: 10px;
+  border: 2px solid #ccc;
+  width: 80%;
+  max-width: 800px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+  padding-bottom: 20px;
+  .popoverTit{
+    clear: both;
+    background: #f1f1f1;
+    padding: 10px 10px;
+  }
+  ul{
+    clear: both;
+    display: block;
+    padding:20px;
+    li{
+      clear: both;
+      display: block;
+      padding-top: 3px;
+      padding-bottom: 3px;
+      font-size:14px;
+      line-height:20px;
+      color:#263445;
+      position: relative;
+      span{
+        padding-right:5px;
+        em{
+          display: inline-block;
+          padding-left:5px;
+          padding-right:5px;
+          color:#fb7d23;
+          font-style: normal;
+        }
+      }
+    }
+  }
+  &>span{
+    clear: both;
+    display: block;
+    width: 79px;
+    height: 32px;
+    line-height: 32px;
+    background: #2e88ff;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    margin: 0 auto;
+    text-align: center;
+    border-radius: 5px;
+    cursor: pointer;
+    &:hover{
+      opacity: 0.6;
+    }
+  }
+}
 /**/
 .clues-title{
   clear: both;
@@ -700,6 +765,7 @@
       border-radius: 4px;
       padding: 0 5px;
       color: #fff;
+      cursor: pointer;
     }
     .level-1{
       background: #ff0000;
