--- a/src/styles/-Article.scss
+++ b/src/styles/-Article.scss
@@ -259,17 +259,12 @@
             h4{
                 width:100%;
                 overflow:hidden;
-                padding:10px;
+                padding:10px 0;
                 text-align:left;
                 font-size:18px;
                 line-height:24px;
                 margin:0px 0px 5px 0px;
                 color:#1a1a1a;
-                padding-left:32px;
-                background-image:url(../../public/userIcon01.jpg);
-                background-position:left center;
-                background-repeat:no-repeat;
-                background-size:21px 17px;
             }
             .clerk-ul{
                 border:1px solid #d4dde2;
