--- a/src/styles/-resize.scss
+++ b/src/styles/-resize.scss
@@ -15,7 +15,7 @@ html,body,#app,#app > .el-container{
     height:100vh;
     overflow: hidden;
     background-color: #f2f2f2;
-    font-family:  "微软雅黑";
+    font-family:  -apple-system,BlinkMacSystemFont,Helvetica Neue,Tahoma,PingFang SC,Microsoft Yahei,Arial,Hiragino Sans GB,sans-serif;
 }
 table{
     border-collapse: collapse;
@@ -29,7 +29,7 @@ img {
 *,*:after,*:before{-webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box; -webkit-touch-callout:none; outline:none;}
 button{outline:none; }
 input{ outline:none; }
-input,textarea{font-family:"微软雅黑"; }
+input,textarea{font-family:-apple-system,BlinkMacSystemFont,Helvetica Neue,Tahoma,PingFang SC,Microsoft Yahei,Arial,Hiragino Sans GB,sans-serif; }
 textarea {resize :none; outline:none; }//去掉提交框右下角箭头
 ul,ol{
     list-style: none;
